force-app/main/default/objects/Project__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <inlineHelpText>it tells about total billing hours of the running project</inlineHelpText>
    <label>Billable Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>