force-app/main/default/objects/Project__c/fields/Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billable_Rate__c</fullName>
    <label>Billable Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Billable Rate</fullName>
                <default>true</default>
                <label>No Billable Rate</label>
            </value>
            <value>
                <fullName>Project Billable Rate</fullName>
            </value>
            <value>
                <fullName>Person Billable Rate</fullName>
            </value>
            <value>
                <fullName>Task Billable Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>