force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>The financial budget allocated for the entire project (typically in currency format).</description>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>