force-app/main/default/objects/Project__c/fields/Project_Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Billable_Rate__c</fullName>
    <label>Project Billable Rate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>