force-app/main/default/objects/Project__c/fields/Project_fee__c.field-meta.xml
<CustomField>
    <fullName>Project_fee__c</fullName>
    <description>It shows the fee amount taken for the project completion</description>
    <inlineHelpText>it shows the amount fee taken by the project</inlineHelpText>
    <label>Project fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>