force-app/main/default/objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>The internal user responsible for managing the overall execution and delivery of the project.</description>
    <label>Project Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>