force-app/main/default/objects/Project__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Billable Rate</fullName>
            </value>
            <value>
                <fullName>Person Billable Rate</fullName>
            </value>
            <value>
                <fullName>Project Billable Rate</fullName>
            </value>
            <value>
                <fullName>Task Billable Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>