force-app/main/default/objects/Project__c/fields/Task_rate_message__c.field-meta.xml
<CustomField>
    <fullName>Task_rate_message__c</fullName>
    <formula>IF(
ISPICKVAL(Rate_Type__c , &quot;Task Billable Rate&quot;),
&quot;Task rate applicable&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task rate message</label>
    <type>Text</type>
</CustomField>