force-app/main/default/objects/Project__c/fields/Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Amount__c</fullName>
    <formula>Billable_Hours__c * Project_Billable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It auto calculate total amount for the project creation</inlineHelpText>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>