force-app/main/default/objects/Project__c/recordTypes/Fixed_Fee.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Fee</fullName>
    <active>true</active>
    <description>Bill a fixed agreed amount regardless of time tracked</description>
    <label>Fixed Fee</label>
</RecordType>