force-app/main/default/objects/Project__c/recordTypes/Non_Billable.recordType-meta.xml
<RecordType>
    <fullName>Non_Billable</fullName>
    <active>true</active>
    <description>Not billed to the client</description>
    <label>Non Billable</label>
</RecordType>