force-app/main/default/objects/Project__c/validationRules/project_billable_rate_visiblity.validationRule-meta.xml
<ValidationRule>
    <fullName>project_billable_rate_visiblity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Rate_Type__c , &quot;Project Billable Rate&quot;) = FALSE,
    NOT(ISBLANK(Project_Billable_Rate__c))
)</errorConditionFormula>
    <errorDisplayField>Project_Billable_Rate__c</errorDisplayField>
    <errorMessage>Billable Rate can only be entered when Rate Type is Project Rate.</errorMessage>
</ValidationRule>